:bricks: ci: Criando arquivos `style.css` e `script.js`

--- a/exer1/index.html
+++ b/exer1/index.html
@@ -5,40 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 1</title>
-    <style>
-        * {
-            border: 0;
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            font-family: sans-serif;
-        }
-
-        .content {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-        }
-
-        .button-wrapper {
-            margin: auto;
-            padding: 2rem;
-            display: flex;
-            border: 1px solid black;
-            border-radius: 0.25rem;
-            background-color: white;
-        }
-
-        .button-wrapper button {
-            margin: auto;
-            padding: 8px;
-            border-radius: 0.25rem;
-            background-color: cadetblue;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -47,14 +14,8 @@
             <button type="button" id="btnAlterColor">Alterar Cor</button>
         </div>
     </div>
-    <script>
-        const generateRandomHexColor = () => "#" + Math.floor(Math.random() * 16777215).toString(16);
-        const alterBackgroundColor = (hexColor) => document.getElementById('content').style.backgroundColor = hexColor;
-
-        document.getElementById("btnAlterColor").addEventListener('click', () => alterBackgroundColor(generateRandomHexColor()))
-
-
-    </script>
 </body>
+
+<script src="script.js"></script>
 
 </html>
