--- a/exer4/index.html
+++ b/exer4/index.html
@@ -53,20 +53,68 @@
     <div class="content">
         <div class="wrapper">
             <div class="input-area">
-                <input type="number" name="" id="">
-                <span class="operator"></span>
-                <input type="number" name="" id="">
+                <input type="number" id="numA">
+                <span id="operator"></span>
+                <input type="number" id="numB">
                 <span>=</span>
-                <span id="result"></span>
+                <span id="resultLabel"></span>
             </div>
             <div class="button-area">
-                <button type="button">+</button>
-                <button type="button">-</button>
-                <button type="button">*</button>
-                <button type="button">/</button>
+                <button type="button" class="operator-btn">+</button>
+                <button type="button" class="operator-btn">-</button>
+                <button type="button" class="operator-btn">x</button>
+                <button type="button" class="operator-btn">÷</button>
             </div>
         </div>
     </div>
 </body>
+
+<script>
+    function calculate(operator, x, y) {
+        var result;
+        switch (operator) {
+            case "+":
+                result = x + y;
+                break;
+            case "-":
+                result = x - y;
+                break;
+            case "x":
+                result = x * y;
+                break;
+            case "÷":
+                if (y == 0) {
+                    throw new Error('Impossível dividir por zero');
+                }
+                result = x / y;
+                break;
+        }
+
+        return result;
+    }
+
+    const buttons = document.querySelectorAll('.operator-btn');
+
+    const numA = document.getElementById('numA')
+    const numB = document.getElementById('numB')
+
+    const operator = document.getElementById('operator')
+
+    const resultLabel = document.getElementById('resultLabel')
+
+
+    buttons.forEach(btn => {
+        btn.addEventListener('click', function () {
+            try {
+                operator.innerText = btn.innerHTML
+
+                var result = calculate(btn.innerHTML, parseInt(numA.value), parseInt(numB.value))
+                resultLabel.innerText = result
+            } catch (e) {
+                alert(e)
+            }
+        })
+    });
+</script>
 
 </html>
