:recycle: refactor: Syle.css e Script.js exer5

--- a/exer5/index.html
+++ b/exer5/index.html
@@ -5,55 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 5</title>
-    <style>
-        * {
-            margin: 0;
-            border: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: sans-serif;
-        }
-
-        .content {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            background-color: cadetblue;
-        }
-
-        .wrapper {
-            margin: auto;
-            border-radius: 1rem;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            padding: 1rem;
-            background-color: white;
-        }
-
-        textarea {
-            border: 1px solid black;
-            padding: 1rem;
-            resize: vertical;
-        }
-
-        .button-area {
-            margin: auto;
-            width: 100%;
-        }
-
-        button {
-            padding: 6px 18px;
-            width: auto;
-            background-color: cadetblue;
-            color: white;
-            font-weight: 600;
-            font-size: medium;
-            border-radius: 4px;
-            width: 100%;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -71,23 +23,6 @@
     </div>
 </body>
 
-<script>
-    const textarea = document.getElementById('text');
-    const button = document.getElementById('btn');
-    const resultLabel = document.getElementById('result-label');
-
-    const countWords = () => textarea.value.split(' ').length;
-
-    button.addEventListener('click', function () {
-        if (textarea.value.length < 1) {
-            alert('Digite o texto');
-            return;
-        }
-
-        var wordQuantity = countWords();
-
-        resultLabel.innerText = wordQuantity;
-    });
-</script>
+<script src="script.js"></script>
 
 </html>
